objects/nXBI__Business_Credit_Alert__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Alert_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Alert_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Business Credit Alert</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Alert Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Alert</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>